--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
-<html lang="ko">
+<html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <link rel="icon" type="image/svg+xml" href="data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100'><text y='0.9em' font-size='90'>🌸</text></svg>" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>규슈 여행 도우미</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
